# vie-plugin-panel-label

./: .gitignore  CHANGELOG.md  pyproject.toml  setup.py
.superpowers/sdd/: task-2-report.md
examples/: build_rec_dataset.py  compare_rfdetr_onnx_trt.py  correct_textline_orientation.py  run.py
examples/orient_review/: README.md  predict_candidates.py  review_io.py  review_tool.py  test_review_io.py
tests/: test_auto_annotate.py  test_backflow_naming.py  test_config_defaults.py  test_dedup.py  test_detection_runner_injection.py  test_direct_ocr_pipeline.py  test_ocr_backend_parity.py  test_ocr_dataset_converter.py  test_onnx_ocr_models.py  test_panel_label_business.py  test_panel_label_judge.py  test_panel_label_sort.py  test_panel_label_utils.py  test_rec_export.py  test_roi_fast_path.py
vie_plugin_panel_label/: __init__.py  business_logic.py  config.py  models.py  ocr_models.py  ordering.py  panel_label_detect.py  plugin.py  product_type.py  schemas.py  utils.py
